--- a/app/src/main/res/layout/fragment_resource_manager.xml
+++ b/app/src/main/res/layout/fragment_resource_manager.xml
@@ -18,47 +18,17 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".activities.ResourceManagerActivity">
+  android:layout_height="match_parent">
 
-  <com.google.android.material.appbar.AppBarLayout
-    android:id="@+id/appbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:fitsSystemWindows="true">
 
-    <com.google.android.material.appbar.MaterialToolbar
-      android:layout_width="match_parent"
-      android:layout_height="?attr/actionBarSize"
-      app:title="@string/app_name"
-      app:titleTextAppearance="@style/TextAppearance.AndroidIDE.TitleLarge.Bold"
-      app:titleCentered="true" />
-
-  </com.google.android.material.appbar.AppBarLayout>
-
-  <com.google.android.material.textview.MaterialTextView
-    android:id="@+id/title"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="16dp"
-    android:text="Resource Manager"
-    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-    android:transitionName="title"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/appbar" />
   <com.google.android.material.tabs.TabLayout
     android:id="@+id/tabs"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layout_constraintTop_toBottomOf="@id/title"
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
+    app:layout_constraintTop_toTopOf="parent">
   </com.google.android.material.tabs.TabLayout>
   <androidx.viewpager2.widget.ViewPager2
     android:id="@+id/view_pager"
