feature: implemented new file creation dialog

--- a/resources/src/main/res/values/styles.xml
+++ b/resources/src/main/res/values/styles.xml
@@ -154,4 +154,9 @@
     <item name="android:windowSoftInputMode">adjustResize</item>
   </style>
 
+  <style name="ShapeableImageViewSmall">
+    <item name="cornerFamily">rounded</item>
+    <item name="cornerSize">16dp</item>
+  </style>
+
 </resources>
