--- a/app/src/main/res/layout/layout_resource_list_item.xml
+++ b/app/src/main/res/layout/layout_resource_list_item.xml
@@ -18,7 +18,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="80dp"
+  android:layout_height="50dp"
   android:layout_margin="4dp"
   app:strokeWidth="0dp">
 
@@ -29,7 +29,7 @@
       android:id="@+id/resource_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="10dp"
+      android:layout_marginTop="5dp"
       android:layout_marginStart="10dp"
       android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
       app:layout_constraintStart_toEndOf="@id/resource_icon"
@@ -46,11 +46,13 @@
       app:layout_constraintTop_toBottomOf="@id/resource_name" />
     <com.google.android.material.imageview.ShapeableImageView
       android:id="@+id/resource_icon"
-      android:layout_width="72dp"
-      android:layout_height="72dp"
+      android:layout_width="42dp"
+      android:layout_height="42dp"
       android:src="@drawable/ic_layout_72dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginStart="5dp"
+      app:shapeAppearanceOverlay="@style/AppTheme.ShapeAppearanceOverlay.Medium"
       app:layout_constraintTop_toTopOf="parent" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
