--- a/resources/src/main/res/values/styles.xml
+++ b/resources/src/main/res/values/styles.xml
@@ -153,5 +153,11 @@
     <item name="android:windowIsFloating">false</item>
     <item name="android:windowSoftInputMode">adjustResize</item>
   </style>
+  
+  <style name="AppTheme.ShapeAppearanceOverlay.Medium" parent="">
+    <item name="cornerSize">30%</item>
+    <item name="cornerFamily">rounded</item>
+
+  </style>
 
 </resources>
