feature: implemented a new way of creating files

--- a/app/src/main/res/layout/layout_resource_list_item.xml
+++ b/app/src/main/res/layout/layout_resource_list_item.xml
@@ -20,6 +20,7 @@
   android:layout_width="match_parent"
   android:layout_height="80dp"
   android:layout_margin="4dp"
+  android:background="@color/translucent_black"
   app:strokeWidth="0dp">
 
   <androidx.constraintlayout.widget.ConstraintLayout
