--- a/app/src/main/res/layout/fragment_bottom_sheet_create_file_.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_create_file_.xml
@@ -19,9 +19,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
+  android:layout_height="wrap_content"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  tools:context=".fragments.DialogCreateFileFragment">
+  tools:context=".fragments.BottomSheetCreateFileFragment">
 
 
 
@@ -33,9 +33,9 @@
     android:text="New"
     android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
     android:transitionName="title"
-    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/list"
@@ -46,8 +46,12 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/title"
-
     tools:itemCount="10"
     tools:listitem="@layout/layout_file_list_item"
     tools:spanCount="3" />
-  </androidx.constraintlayout.widget.ConstraintLayout>
+
+  <include
+    android:id="@+id/layout_create_file"
+    layout="@layout/layout_create_file_item"
+    />
+</androidx.constraintlayout.widget.ConstraintLayout>
