--- a/app/src/main/res/layout/layout_file_list_item.xml
+++ b/app/src/main/res/layout/layout_file_list_item.xml
@@ -15,10 +15,17 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="56dp">
+  android:layout_height="56dp"
+  android:layout_margin="4dp"
+  app:strokeWidth="0dp">
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
   <TextView
     android:id="@+id/file_name"
     android:layout_width="wrap_content"
@@ -40,4 +47,5 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:shapeAppearanceOverlay="@style/ShapeableImageViewSmall" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
